# AI_agent_expense_tracker

./: .gitignore  CLAUDE.md  PROJECT_SUMMARY.md  README.md  agent_bridge.py  app.py  charts.py  expense_start.command  expense_stop.command  llms-full.txt  pyproject.toml  requirements.txt  test_agent.py
assets/: custom.css
docs/superpowers/plans/: 2026-06-13-expense-tracker-v2.md  2026-06-22-history-page.md  2026-07-15-trips-feature.md
docs/superpowers/specs/: 2026-06-13-expense-tracker-v2-design.md  2026-06-22-categoriser-improvements.md  2026-06-22-history-page-design.md  2026-07-15-trips-feature-design.md
expense_tracker_agent/: agent.py  agent_bridge.py  categoriser.py  charts.py  db.py  receipt_scanner.py  tools.py  trip_db.py
pages/: add_expense.py  backup.py  budgets.py  dashboard.py  history.py  import_csv.py  scan_receipt.py  trip_detail.py  trips.py
scripts/: backup_db.py  install_backup_schedule.sh  uninstall_backup_schedule.sh
specs/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/001-expense-tracker/: quickstart.md
specs/contracts/: tools.md
tests/: conftest.py  test_agent.py  test_agent_bridge.py  test_charts.py  test_db.py  test_fallback_parser.py  test_history.py  test_receipt_scanner.py  test_tools.py  test_trip_db.py
