[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "expense-tracker-agent"
version = "0.2.0"
description = "An expense tracking agent with Dash dashboard."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk",
    "pydantic",
    "google-generativeai",
    "dash>=2.14",
    "dash-bootstrap-components>=1.5",
    "plotly>=5.18",
    "pandas>=2.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["expense_tracker_agent"]
